apps/rhf-mui-docs/src/app/v2/components/mui/RHFMultiAutocomplete/page.mdx
import { DocsPage, PropsTable, Callout } from '@/components/docs';
import { componentMetadata, componentProps } from '@/constants';

export const metadata = componentMetadata.RHFMultiAutocomplete;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFMultiAutocomplete

**RHFMultiAutocomplete** is an enhanced version of [RHFAutocomplete](/v2/components/mui/RHFAutocomplete)
that supports selecting multiple options from the dataset. This component also includes
a **"Select All"** feature, allowing users to quickly select all available options with a single click.

This feature is particularly useful for scenarios where users need to handle bulk selections,
such as assigning multiple tags, selecting categories, or choosing items in batch operations.
The implementation ensures flexibility while maintaining a seamless user experience, with the
same validation, customization, and styling options as `RHFAutocomplete`.

<Callout type="note">
  The `freeSolo` prop of **Autocomplete** is not supported for this component.
</Callout>

## Usage

```tsx
import RHFMultiAutocomplete, { RHFMultiAutocompleteProps } from '@nish1896/rhf-mui-components/mui/multi-autocomplete';
```

```tsx
<RHFMultiAutocomplete
  fieldName="countriesVisited"
  control={control}
  options={['Azerbaijan', 'Canada', 'India']}
  errorMessage={errors?.countriesVisited?.message}
/>
```

For options as an array of objects:

```tsx
<RHFMultiAutocomplete
  fieldName="countriesVisited"
  control={control}
  options={countryList} // imported from RHFCountrySelect
  labelKey="name"
  valueKey="iso"
  errorMessage={errors?.countriesVisited?.message}
/>
```

<Callout type="warning">
  When using an array of objects for options, both `labelKey` and `valueKey`
  are required. If either is missing, an error will be thrown.
</Callout>

## API
The `RHFMultiAutocompleteProps` interface extends [AutocompleteProps](https://v6.mui.com/material-ui/api/autocomplete/)
and accepts the following additional props.
Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable
  rows={componentProps.RHFMultiAutocomplete}
  docsVersion={2}
  muiVersion={6}
/>
